--- a/app/posts/hello.mdx
+++ b/app/posts/hello.mdx
@@ -1,16 +1,27 @@
 
-export const created = new Date(2025, 1, 26);
-export const updated = new Date(2025, 1, 26);
+export const metadata = {
+    title: "Introduction to Zero-Copy mechanics with Rust",
+    created: new Date(2025, 1, 28),
+    // updated: Date.parse("2025-02-26"),
+    tags: ["rust", "codecs", "performance" ],
+    author: "Niklas Saari",
+    description: "Zero-copy mechanics with Rust, part 1"
+};
 
 
-# Hello, world!
-
-> Some **notable** things in a block quote! Because why not.
-
-> Today is {date.toDateString()}.
+When working with low-level proramming and networking, you will often hear the term **zero copy**. 
+This is a powerful concept that allows you to avoid unnecessary copying of data.
+In this post, we will explore the basics of zero copy and how it can be used to improve the performance of your Rust applications.
 
 
 This is `a wow moment` for me.
+How fast can we go? Copying without overhead is the key to performance.
+Yes yes yes. sapien sit amet nunc tincidunt tincidunt. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+sapien sit amet nunc tincidunt tincidunt. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus.
 
 ```rust
 fn main() {
@@ -18,6 +29,41 @@ fn main() {
 }
 ```
 
+Let's write a lorem ipsum paragraph:
 
-*This website was built with React Router and WASM. Get your hands dirty if you want to reuse.*
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac
+sapien sit amet nunc tincidunt tincidunt. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+suscipit, ultricies nunc nec, tincidunt nunc. Nullam nec purus
+
+
+```math frame="none"
+L = \frac{1}{2} \rho v^2 S C_L
+```
+
+```math
+\left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)
+```
+
+## But what then?
+
+I  know right? This is a great post.
+### More
+I want something more...
+
+## Nothing
+
+But peanuts.
+
+### But
+
+Butter.
 
