--- a/app/posts/gaming-with-linux-containers/index.mdx
+++ b/app/posts/gaming-with-linux-containers/index.mdx
@@ -6,8 +6,7 @@ export const metadata = {
     author: "Niklas Saari",
     description: "Gaming on Linux can be simple."
 };
-
-import previewImage from './preview_mtg_container.png';
+import previewImage from './preview_mtg_container.png?w=800&format=webp';
 
 There was a moment in one weekend when I wanted to play one Windows game on my laptop, but unfortunately, I am using Linux with integrated Intel graphics and that does not sound too promising.
 
@@ -15,8 +14,10 @@ The other repelling thought proved to be the amount of dependencies I would need
 
 However, there is another, bit more lightweight solution; containers, especially OCI or Docker containers. So instead of playing the game a bit, I ended up spending a weekend for installing it. In the end, it seemed to be possible. On top of wrapping all the software on single container, games are executed at least in a bit more isolated matter. If I ever want to get same environment back again, I could just pull single Docker image.
 
-
- {/* ![Testing MTGArena on container.](${previewImage}) */}
+<img 
+    src={previewImage}
+    alt="Testing MTGArena on container."
+/>
 
 
 
@@ -42,7 +43,7 @@ What this means in practice, is that container needs more access into host syste
 
 If you don't have it already, for Debian you can install it for example with following command. It might be better to skip this, if you don't know how to make it as your primary server if you have another one already.
 
-```bash showLineNumbers=false
+```sh showLineNumbers=false frame="none"
 apt-get update && apt-get install pulseaudio
 ```
 
@@ -50,20 +51,20 @@ To get some sound from the container for your host machine speakers, one way is 
 
 Look for user-specific Pulse configuration file in path:
 
-```bash showLineNumbers=false
+```bash showLineNumbers=false frame="none"
 cat "${HOME}/.config/pulse/default.pa"
 ```
 
 Modify or create the file with following contents:
 
 
-```shell showLineNumbers=false 
+```shell showLineNumbers=false frame="none"
 .include /etc/pulse/default.pa
 load-module module-native-protocol-unix socket=/tmp/pulse-socket
 ```
 After applying changes, server should be restarted.
 
-```bash showLineNumbers=false
+```bash showLineNumbers=false frame="none"
 pulseaudio -k
 pulseaudio --start
 pulseaudio --check
@@ -71,7 +72,7 @@ pulseaudio --check
 
 Now, when we have also container with PulseAudio installed, we can share this socket as read-only volume into container. To make container to use this socket, it should be configured as well; modify file in the same path as before inside container to contain:
 
-```shell showLineNumbers=false
+```shell showLineNumbers=false frame="none"
 # Use host socket
 default-server = unix:/tmp/pulse-socket
 enable-shm = false
@@ -98,20 +99,20 @@ We can limit access for this specific container with similar way than with sound
 
 Hexadecimal key can be acquired with xauth tool:
 
-```shell showLineNumbers=false
+```shell showLineNumbers=false frame="none"
 xauth list                
 workstation/unix:  MIT-MAGIC-COOKIE-1  f57d6fbab111c34b56efb04776e52229
 ```
 
 Inside container as root, display can be then added as:
 
-```bash showLineNumbers=false
+```bash showLineNumbers=false frame="none"
 xauth add “$DISPLAY” . <key>
 ```
 
 This will generate .Xauthority file, which should be copied for correct user as well. Note, that variables have been predefined manually.
 
-```shell showLineNumbers=false
+```shell showLineNumbers=false frame="none"
 cp /root/.Xauthority "${USER_HOME}"
 chown "${USER_UID}":"${USER_GID}" "${USER_HOME}/.Xauthority"
 ```
@@ -129,7 +130,7 @@ Graphic cards are usually found from the path /dev/dri . They can be passed as d
 
 On Debian based system, you can install AMD and Intel based drivers with Vulkan support by getting following packages:
 
-```shell showLineNumbers=false
+```shell showLineNumbers=false frame="none"
 dpkg --add-architecture i386 && \ # Get 32-bit support as well
 apt-get update && apt-get install vulkan-utils \
 mesa-vulkan-drivers \
@@ -149,7 +150,7 @@ There is one big open-source project just for this; [Lutris ](https://lutris.net
 
 Dependencies of Lutris can be installed for Debian based system as follows:
 
-```shell showLineNumbers=false
+```shell showLineNumbers=false frame="none"
 echo "deb http://download.opensuse.org/repositories/home:/strycore/Debian_10/ ./" | tee /etc/apt/sources.list.d/lutris.list \
 && wget -q https://download.opensuse.org/repositories/home:/strycore/Debian_10/Release.key -O- | apt-key add - \
 && apt-get update \
@@ -158,7 +159,7 @@ echo "deb http://download.opensuse.org/repositories/home:/strycore/Debian_10/ ./
 
 Latest client can be installed from GitHub releases:
 
-```shell showLineNumbers=false
+```shell showLineNumbers=false frame="none"
 mkdir -p /tmp/lutris && \
 curl -s https://api.github.com/repos/lutris/lutris/releases/latest > /tmp/lutris/version.json && \
 jq ".tarball_url" /tmp/lutris/version.json | xargs curl -Lo /tmp/lutris/lutris && \
@@ -179,7 +180,7 @@ Game has been running smoothly on my machine so far, with Vulkan transitions aft
 
 In the end, I made Python script and specific Docker image to automate most of the requirements and it is available at [GitHub in here](https://github.com/Nicceboy/gamify-containers). It will create required named volume of game data ($HOME directory of user) and sets environment up. Docker image has been pre-built and can be pulled with command
 
-```bash showLineNumbers=false
+```bash showLineNumbers=false frame="none"
 docker pull ghcr.io/nicceboy/lutris-vulkan:latest`
 ```
 
@@ -187,11 +188,11 @@ Python script will launch the Lutris client from container after setting up envi
 As manual step, PulseAudio should be configured beforehand.
 
 
-```bash showLineNumbers=false title="Script can be installed as package"
+```bash showLineNumbers=false frame="none"
 pip install git+https://github.com/Nicceboy/gamify-containers
 ```
 
-```bash showLineNumbers=false title="Lutris can be finally started"
+```bash showLineNumbers=false frame="none"
 playlutris --detach
 ```
 
