--- a/app/posts/latex-with-containers-and-apple-silicon/index.mdx
+++ b/app/posts/latex-with-containers-and-apple-silicon/index.mdx
@@ -1,38 +1,11 @@
----
-title: "LaTeX with OCI containers, Podman and Arch Linux ARM on Apple Silicon"
-summary: "This blog post introduces a brief overview of how to set up a container runner on your ARM Macbook and how to create an AArch64 Open Container Initiative (OCI) container image from the scratch."
-date: 2023-02-11
-draft: false
-tags: ["containers", "podman", "docker", "mac", "arm", "latex", "oci"]
-author: Niklas Saari
-# author: ["Me", "You"] # multiple authors
-showToc: true
-TocOpen: true
-hidemeta: false
-comments: false
-description: "Building and using ARM-based OCI images on Apple Silicon from scratch. LaTeX document preparation system used as an example."
-disableShare: false
-disableHLJS: true
-hideSummary: false
-searchHidden: false 
-ShowReadingTime: true
-ShowBreadCrumbs: false
-ShowPostNavLinks: true
-ShowWordCount: true
-ShowRssButtonInSectionTermList: true
-UseHugoToc: true
-params:
-    ShowBreadCrumbs: true
-cover:
-    image: "latex.svg"
-    alt: "LaTeX logo"
-    # caption: "Magic The Gathering: Arena works well when played from the Linux container." -->
-    relative: true # when using page bundles set this to true
-    hidden: false # only hide on current single page
-editPost:
-    Text: "Suggest Changes" # edit text
-    appendFilePath: true # to append file path to Edit link
----
+export const metadata = {
+    title: "LaTeX with OCI containers, Podman and Arch Linux ARM on Apple Silicon",
+    created: Date.parse("2023-02-11"),
+    // updated: Date.parse("2025-02-26"),
+    tags: ["containers", "podman", "docker", "mac", "arm", "latex", "oci"],
+    author: "Niklas Saari",
+    description: "Building and using ARM-based OCI images on Apple Silicon from scratch. LaTeX document preparation system used as an example."
+};
 
 Since the release of Apple's M1 Chips, ARM architecture has expanded to a larger user base.
 The power efficiency and performance of the new chips have made them quite desirable.
@@ -40,7 +13,6 @@ Unfortunately, most of the existing advanced developer-required toolchains were 
 
 This blog post introduces a brief overview of how to set up a container runner on your ARM Macbook and how to create an AArch64 [Open Container Initiative (OCI)](https://opencontainers.org/about/overview/) container image from the scratch.
 
-<!-- Especially, by using Buildah to build the image and Podman to run it. -->
 
 The example builds $\rm\TeX$ Live for $\rm\LaTeX$ since I could not find an existing up-to-date image after I sold my soul to the devil by getting M2 Apple device.
 
@@ -77,7 +49,7 @@ Buildah can be used from the VM or inside another container, but that is too com
 
 We will use [Nix](https://nixos.org/manual/nix/stable/package-management/basic-package-mgmt.html) to install QEMU and Podman.
 
-```sh
+```sh frame="none"
 nix-env -iA nixpkgs.qemu nixpkgs.podman 
 ```
 
@@ -89,14 +61,14 @@ You could either mount a specific limited directory into the machine or the whol
 Mounting the whole home directory might not be advised, but I will do it for demonstration purposes.
 CPU count and memory size has been also increased.
 
-```sh
+```sh frame="none"
 podman machine init -m 4096 --cpus 2 -v "$HOME:$HOME"
 podman machine start
 podman info
 ```
 The final command should showcase that we are indeed running CoreOS on ARM instructions inside a VM:
 
-```sh
+```sh frame="none"
 host:
   arch: arm64
   buildahVersion: 1.28.0
@@ -124,13 +96,13 @@ However, there is no official container image for ARM-based Arch Linux.
 
 We can create a base image from the scratch; we download the official AArch64 [multiplatform release](https://archlinuxarm.org/about/downloads), and since Linux is purely a file-based system, we just import the contents into the container, and it should work.
 
-```bash
+```bash frame="none"
 curl -L http://os.archlinuxarm.org/os/ArchLinuxARM-aarch64-latest.tar.gz | podman import - archlinuxarm
 ```
 This will create a new image with the namespace `localhost/archlinuxarm:latest`. 
 
 You can try it out
-```bash
+```bash frame="none"
 podman run --rm -it archlinuxarm bash
 ```
 
@@ -150,7 +122,8 @@ We might also want to install additional [CTAN](https://ctan.org/) packages, whi
 For that, we need The TeXLive Package Manager (tlmgr), which is often challenging to install.
 The following example installs *EB Garamond font* and *setspace* package.
 
-```Dockerfile {linenos=true}
+```dockerfile frame="code"
+
 FROM archlinuxarm:latest
 
 # If you want to use custom mirror to download packages instead of the automatic geolocation
@@ -202,21 +175,21 @@ As an example, we will build IEEE Conference template.
 The template is provided [in here.](https://www.ieee.org/conferences/publishing/templates.html)
 
 Download and extract it:
-```bash
+```bash frame="none"
 curl -o ieee_template.zip -L https://www.ieee.org/content/dam/ieee-org/ieee/web/org/pubs/conference-latex-template_10-17-19.zip && 7z x ieee_template.zip
 ```
 
 Mount the source into our container.
 Note the ``--userns`` option; it maps the ownership of the volume inside the container to the correct non-root user.
 
-```bash
+```bash frame="none"
 cd Conference-LaTeX-template_10-17-19 
 podman run --userns=keep-id:uid=1000,gid=1000 --rm -itv "$(pwd):/latex" texlive:latest
 ```
 
 To build our document with LuaLatex and to also detect new changes
 
-```bash
+```bash frame="none"
 cd /latex
 latexmk -pdflatex=lualatex  -pdf -pvc conference_101719.tex
 ```
