Icon design, switchable theme, better paddings

--- a/app/posts/footnote-example.mdx
+++ b/app/posts/footnote-example.mdx
@@ -7,6 +7,20 @@ export const metadata = {
     description: "A note."
 };
 
+This is a wonderful post about footnotes and sidenotes.
+
+
+
+```rust
+fn main() {
+    println!("Hello, world!");
+}
+```
+
+`echo - n 'Hello, world!'`
+
+
+
 This post includes and tracks some more complex features of this blog.
 It might help on catching some bugs in the future.
 
