--- a/app/posts/gaming-with-linux-containers/index.mdx
+++ b/app/posts/gaming-with-linux-containers/index.mdx
@@ -1,4 +1,4 @@
-import previewImage from './preview_mtg_container.png?w=800&format=webp';
+import previewImage from './preview_mtg_container.png?w=800&format=avif';
 
 export const metadata = {
     title: "Running Your Favorite Windows Games on Linux Containers",
