Style changes, proper MDX use

--- a/app/posts/about.mdx
+++ b/app/posts/about.mdx
@@ -10,10 +10,10 @@ import { Package } from "@phosphor-icons/react";
 Hi, I am Niklas! This webpage is my personal blog where all opinions are my own and do not represent my employer or any other organization, unless explicitly mentioned otherwise.
 
 The website was built with an overly complicated, modern
-front-end stack. 
+front-end stack from scratch. 
 The features of the blog will also increase over the time. If there are more than 10 posts some day, I will add search and category filter, but not likely before.
 
-To not disappoint Rube Goldberg[^1], the search will be also something extraordinaly unnecessary, likely SIMD accelerated WASM.
+To not disappoint Rube Goldberg[^1], the search will be also something extraordinary unnecessary, likely SIMD accelerated WASM.
 I plan to write posts about these things too.
 
 If I ever manage to reach the 10 posts, I will also add Atom feed, but not likely before.
