Post SSR rework

--- a/app/posts/about.mdx
+++ b/app/posts/about.mdx
@@ -1,17 +1,12 @@
-      
-import { Package } from "@phosphor-icons/react";
-
 <div style={{ display: 'flex', justifyContent: 'center', width: '100%' }}>
     # About this page
 </div>
-
-
 
 Hi, I am Niklas! This webpage is my personal blog where all opinions are my own and do not represent my employer or any other organization, unless explicitly mentioned otherwise.
 
 The website was built with an overly complicated, modern
 front-end stack from scratch. 
-The features of the blog will also increase over the time. If there are more than 10 posts some day, I will add search and category filter, but not likely before.
+The features of the blog will increase over the time. If there are more than 10 posts some day, I will add search and category filter, but not likely before.
 
 To not disappoint Rube Goldberg[^1], the search will be also something extraordinary unnecessary, likely SIMD accelerated WASM.
 I plan to write posts about these things too.
