--- a/app/posts/gaming-with-linux-containers/index.mdx
+++ b/app/posts/gaming-with-linux-containers/index.mdx
@@ -1,4 +1,4 @@
-import PostContainer from "~/layouts/post.tsx";
+import PostContainer from "~/routes/posts/post_layout.tsx";
 import previewImage from './preview_mtg_container.png?w=800&format=avif';
 
 export const metadata = {
