--- a/app/posts/latex-with-containers-and-apple-silicon/index.mdx
+++ b/app/posts/latex-with-containers-and-apple-silicon/index.mdx
@@ -1,4 +1,5 @@
-import PostContainer from "~/layouts/post.tsx";
+import PostContainer from "~/routes/posts/post_layout.tsx";
+// import previewImage from './latex.svg';
 export const metadata = {
     title: "LaTeX with OCI containers, Podman and Arch Linux ARM on Apple Silicon",
     created: Date.parse("2023-02-11"),
