New post, favicon formatting

--- a/app/posts/latex-with-containers-and-apple-silicon/index.mdx
+++ b/app/posts/latex-with-containers-and-apple-silicon/index.mdx
@@ -1,5 +1,5 @@
 import PostContainer from "~/routes/posts/post_layout.tsx";
-// import previewImage from './latex.svg';
+import previewImage from './latex.svg';
 export const metadata = {
     title: "LaTeX with OCI containers, Podman and Arch Linux ARM on Apple Silicon",
     created: Date.parse("2023-02-11"),
@@ -8,6 +8,7 @@ export const metadata = {
     author: "Niklas Saari",
     description: "Building and using ARM-based OCI images on Apple Silicon from scratch. LaTeX document preparation system used as an example.",
     toc: true,
+    image: previewImage
 };
 
 Since the release of Apple's M1 Chips, ARM architecture has expanded to a larger user base.
